fixed spelling error, css overflow property and styling

--- a/src/components/Burger/BurgerIngredient/BurgerIngredient.css
+++ b/src/components/Burger/BurgerIngredient/BurgerIngredient.css
@@ -49,7 +49,8 @@
 	position: absolute;
 	background-color: white;
 	left: 180%;
-	top: -50%;
+	top: -45%;
+	margin-top: 10px;
 	border-radius: 40%;
 	transform: rotate(60deg);
 	box-shadow: inset -1px -3px #c9c9c9;
